terraform/aws/components/account/route_table_public.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.account_vpc.id
  tags = merge(local.default_tags, {
    Name = "${local.resource_prefix}-public_rt"
  })
}

resource "aws_route_table_association" "public_route_public_subnet" {
  subnet_id = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public.id 
}
