terraform/aws/components/account/routes_public.tf
resource "aws_route" "route_public_to_igw" {
  route_table_id = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.igw.id
}
